sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:10: error: not found: value j
      if (!plusPetit(j,j+1)) {
                     ^AlgBubbleSort1:10: error: not found: value j
      if (!plusPetit(j,j+1)) {
                       ^AlgBubbleSort1:12: error: not found: value j
        echange(j,j+1)
                ^AlgBubbleSort1:12: error: not found: value j
        echange(j,j+1)
                  ^