sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
  var a:Boolean = true
  
  while(a) {
  
  	for (i <- 0 to getNombreValeurs()-2) {
    
    	if (!plusPetit(j,j+1)) {
        
    		echange(j,j+1)
        
      }
      
      else { 
        
        a = false
        
      }
      
    }
  
	}
  
}